added skinRefresh proerty for mobs with innate stoneskin

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -289,6 +289,7 @@ timer.mins.exhume=10.000
 timer.secs.monkCombination=30.000
 timer.mins.physicalNotch=6.000
 timer.mins.mentalNotch=12.000
+timer.secs.mob.skinRefresh=60.000
 [associations]
 guild.maxOutposts=2.000
 guild.outpost.maxGolem=2.000
