added epic.zoneFreq properties

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1171,6 +1171,11 @@ epic.zoneTrophy.maxMods=0.000
 epic.frag.threshold=0.10
 epic.frag.amount=20.00
 epic.touch.maxPayoutFactor=1.500
+epic.freqMod.tick.waitSecs=3600
+epic.freqMod.tick.add=0.0021
+epic.freqMod.touch.sub=0.100
+epic.freqMod.min=0.40
+epic.freqMod.max=2.00
 [auctions]
 auctions.defaultLength=172800.000
 auctions.bidTimeExtension=600.000
