--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -25,6 +25,7 @@ map.verticalFactor=0.600
 map.shout.range=40.000
 map.shout.sizeFactor=4.000
 [damage]
+damroll.mod=0.9
 damage.mob.bonus=1.250
 damage.damrollCap=39.000
 damage.eliteBonus=1.300
