--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1243,5 +1243,6 @@ nexusStones.touchTimerSecs=600.000
 nexusStones.turnTimerSecs=3600.000
 nexusStones.epicsMin=50.000
 nexusStones.epicsMax=70.000
+nexusStones.expireDays=30.000
 [worldQuest]
 worldQuest.maxPerDay=3.000
