sanctuary now increases with group size, ap's have a separate vamp touch modifier

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -21,6 +21,7 @@ backstab.diceMultiplier=2.800
 [vamping]
 vamping.vampiricTouch=0.250
 vamping.vampiricTouch.monks=0.050
+vamping.vampiricTouch.antipaladins=0.300
 vamping.hellfire=1.000
 vamping.hellfire.absorb=0.160
 vamping.battleEcstasy=0.080
@@ -40,6 +41,7 @@ damage.mob.bonus=1.000
 damage.damrollCap=39.000
 damage.eliteBonus=1.300
 damage.reduction.sanctuary=0.800
+damage.reduction.sanctuary.paladin.groupMod=0.02
 damage.reduction.trollskin=0.850
 damage.reduction.barkskin=0.850
 damage.reduction.soulshield.melee=0.800
