added nexus sage hitpoints to properties

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1261,6 +1261,7 @@ nexusStones.sage.death.guardian.hit.modifier=0.500
 nexusStones.sage.respawnWaitSecs=3600.000
 nexusStones.sage.statAddCost=1.000
 nexusStones.sage.statAdd=1.000
+nexusStones.sage.hitPoints=6000.000
 [worldQuest]
 worldQuest.maxPerDay=3.000
 [mines]
