added racial spell damage mods, tweaked properties code

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -266,6 +266,28 @@ damage.pulse.class.Dreadlord=-1.000
 damage.pulse.class.Avenger=-1.000
 damage.minPoofChance=12.000
 damage.maxPoofChance=40.000
+damage.spellTypeMod.defensive.racial.Human.generic=1.000
+damage.spellTypeMod.defensive.racial.Human.fire=1.000
+damage.spellTypeMod.defensive.racial.Human.cold=1.000
+damage.spellTypeMod.defensive.racial.Human.lightning=1.000
+damage.spellTypeMod.defensive.racial.Human.gas=1.000
+damage.spellTypeMod.defensive.racial.Human.acid=1.000
+damage.spellTypeMod.defensive.racial.Human.negative=1.000
+damage.spellTypeMod.defensive.racial.Human.holy=1.000
+damage.spellTypeMod.defensive.racial.Human.psionic=1.000
+damage.spellTypeMod.defensive.racial.Human.spiritual=1.000
+damage.spellTypeMod.defensive.racial.Human.sound=1.000
+damage.spellTypeMod.offensive.racial.Human.generic=1.000
+damage.spellTypeMod.offensive.racial.Human.fire=1.000
+damage.spellTypeMod.offensive.racial.Human.cold=1.000
+damage.spellTypeMod.offensive.racial.Human.lightning=1.000
+damage.spellTypeMod.offensive.racial.Human.gas=1.000
+damage.spellTypeMod.offensive.racial.Human.acid=1.000
+damage.spellTypeMod.offensive.racial.Human.negative=1.000
+damage.spellTypeMod.offensive.racial.Human.holy=1.000
+damage.spellTypeMod.offensive.racial.Human.psionic=1.000
+damage.spellTypeMod.offensive.racial.Human.spiritual=1.000
+damage.spellTypeMod.offensive.racial.Human.sound=1.000
 [exp]
 exp.factor.racewar.good=0.700
 exp.factor.racewar.evil=0.600
