--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1151,6 +1151,7 @@ skill.improvedShieldCombat.damageMultiplier=1.000
 skill.listen.range.norm=1.000
 skill.listen.range.improved=2.000
 skill.listen.range.norm.extend=1.000
+skill.spellPenetration.damageReductionMod=0.250
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
