--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -154,6 +154,7 @@ damage.totalOutput.racial.Spectre=1.000
 damage.totalOutput.racial.Wraith=1.000
 damage.totalOutput.racial.Shadow=1.000
 damage.totalOutput.racial.Drider=1.000
+damage.totalOutput.racial.PurpleWorm=1.000
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=13.000
 damage.pulse.racial.Barbarian=13.000
@@ -230,6 +231,7 @@ damage.pulse.racial.Wraith=10.000
 damage.pulse.racial.Spectre=10.500
 damage.pulse.racial.Shadow=10.500
 damage.pulse.racial.Drider=12.000
+damage.pulse.racial.PurpleWorm=10.000
 damage.totalOutput.class.None=1.000
 damage.totalOutput.class.Warrior=1.000
 damage.totalOutput.class.Ranger=1.010
@@ -389,6 +391,7 @@ spellcast.pulse.racial.Wraith=1.000
 spellcast.pulse.racial.Spectre=1.000
 spellcast.pulse.racial.Zombie=1.000
 spellcast.pulse.racial.Drider=1.000
+spellcast.pulse.racial.PurpleWorm=1.000
 [exp]
 exp.factor.racewar.good=0.700
 exp.factor.racewar.evil=0.600
@@ -1287,6 +1290,16 @@ stats.wis.Drider=110.000
 stats.cha.Drider=20.000
 stats.kar.Drider=100.000
 stats.luc.Drider=100.000
+stats.str.PurpleWorm=185.000
+stats.dex.PurpleWorm=100.000
+stats.agi.PurpleWorm=100.000
+stats.con.PurpleWorm=195.000
+stats.pow.PurpleWorm=25.000
+stats.int.PurpleWorm=75.000
+stats.wis.PurpleWorm=10.000
+stats.cha.PurpleWorm=20.000
+stats.kar.PurpleWorm=100.000
+stats.luc.PurpleWorm=100.000
 [innates]
 innate.shrug.Dragonkin=20.000
 innate.shrug.Illithid=70.000
