added guild size properties

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -467,6 +467,17 @@ guild.hall.maxGolem=4.000
 guild.golems.pushDuration.secs=24.000
 guild.prestige.groupSizeMinimum=3.000
 guild.prestige.epicPointMinimum=3.000
+guild.prestige.guild=2000.000
+guild.prestige.kingdom=4000.000
+guild.size.base.clan=5.000
+guild.size.max.clan=24.000
+guild.size.step.clan=50.000
+guild.size.base.guild=25.000
+guild.size.max.guild=34.000
+guild.size.step.guild=100.000
+guild.size.base.kingdom=35.000
+guild.size.max.kingdom=45.000
+guild.size.step.kingdom=500.000
 [spells]
 spell.teleport.range=30.000
 spell.area.minChance.earthenRain=50.000
