- changed innate.timer into innate.timer.secs.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -443,8 +443,6 @@ exp.goodieDeathExpLossLevelThreshold=30.000
 groups.size.max.good=13.000
 groups.size.max.evil=13.000
 [timers]
-timer.innate.godCall=900.000
-timer.innate.godCallSpec=480.000
 timer.decay.corpse.pc=120.000
 timer.decay.corpse.npc=15.000
 timer.mins.planetaryAlignment=3.000
@@ -464,7 +462,6 @@ timer.mins.physicalNotch=6.000
 timer.mins.mentalNotch=12.000
 timer.secs.mob.skinRefresh=60.000
 timer.mins.statPool=1440.000
-innate.timer.layHands=720.000
 [associations]
 guild.maxOutposts=2.000
 guild.outpost.maxGolem=2.000
@@ -1348,15 +1345,7 @@ innate.shrug.Wraith=35.000
 innate.shrug.Shadow=25.000
 innate.shrug.Drider=55.000
 innate.evasion.removechance=15.000
-innate.timer.pyrokinesis=20.000
-innate.timer.drainLife=60.000
-innate.timer.hatred=4.000
-innate.timer.foundry=120.000
-innate.timer.planeShift=80.000
-innate.timer.shift_prime=720.000
-innate.timer.summonMount=720.000
 innate.dualDaggers.pulse=-3.000
-innate.timer.layHands=720.000
 # heals = heals * ( healing_mod * level ) / 100
 innate.paladin_aura.healing_mod=0.200
 # dam = dam * ( battlelust_mod * level) / 100
@@ -1370,6 +1359,18 @@ innate.paladin_aura.endurance_move_mod=1.000
 # +hp = vigor_hp_mod * level
 innate.paladin_aura.vigor_hp_mod=1.000
 innate.branchDumper=0.950
+#
+innate.timer.secs.default=720.000
+innate.timer.secs.layHands=720.000
+innate.timer.secs.summonMount=720.000
+innate.timer.secs.planeShift=80.000
+innate.timer.secs.shift_prime=720.000
+innate.timer.secs.pyrokinesis=20.000
+innate.timer.secs.drainLife=60.000
+innate.timer.secs.hatred=4.000
+innate.timer.secs.foundry=120.000
+innate.timer.secs.godCall=900.000
+innate.timer.secs.godCallSpec=480.000
 [misfire]
 misfire.zoning.maxGroup=13.000
 misfire.pvp.maxDiff=20.000
