Orogs property of love

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -174,7 +174,7 @@ damage.pulse.racial.Troll=14.000
 damage.pulse.racial.Half-Elf=13.000
 damage.pulse.racial.Illithid=14.000
 damage.pulse.racial.Orc=13.000
-damage.pulse.racial.Orog=16.000
+damage.pulse.racial.Orog=14.500
 damage.pulse.racial.Thri-Kreen=12.000
 damage.pulse.racial.Centaur=13.500
 damage.pulse.racial.Githyanki=13.000
@@ -697,15 +697,15 @@ stats.wis.Orc=95.000
 stats.cha.Orc=80.000
 stats.kar.Orc=100.000
 stats.luc.Orc=100.000
-stats.str.Orog=115.000
-stats.dex.Orog=80.000
-stats.agi.Orog=80.000
-stats.con.Orog=130.000
-stats.pow.Orog=50.000
-stats.int.Orog=40.000
+stats.str.Orog=140.000
+stats.dex.Orog=70.000
+stats.agi.Orog=70.000
+stats.con.Orog=120.000
+stats.pow.Orog=70.000
+stats.int.Orog=60.000
 stats.wis.Orog=90.000
-stats.cha.Orog=65.000
-stats.kar.Orog=65.000
+stats.cha.Orog=50.000
+stats.kar.Orog=60.000
 stats.luc.Orog=100.000
 stats.str.Thri-Kreen=100.000
 stats.dex.Thri-Kreen=135.000
@@ -1320,6 +1320,7 @@ stats.luc.PurpleWorm=100.000
 [innates]
 innate.rrakkma.maxSteps=5.000
 innate.rrakkma.stepPct=5.000
+innate.warcallersfury.maxSteps=3.000
 innate.shrug.Dragonkin=20.000
 innate.shrug.Illithid=70.000
 innate.shrug.GreyElf=40.000
