--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1431,7 +1431,7 @@ skill.improvedShieldCombat.damageMultiplier=1.000
 skill.listen.range.norm=1.000
 skill.listen.range.improved=2.000
 skill.listen.range.norm.extend=1.000
-skill.spellPenetration.damageReductionMod=0.250
+skill.spellPenetration.damageReductionMod=1.000
 skill.maul.dumpingFactor=95.000
 [terrains]
 terrain.forest.lostChance=0.000
@@ -1644,6 +1644,9 @@ archery.enchantArrows.mark.duration=300.000
 prestige.update.secs=5400.000
 prestige.update.decrease.kingdom=2.000
 prestige.update.decrease.guild=1.000
+prestige.gain.passive=0.300
+prestige.gain.bonus=0.100
+prestige.bonus.gain.requirement=2.000
 [poison]
 poison.maxDuration.min=10.000
 [ascend]
