Property changes for Agathinon.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -162,7 +162,7 @@ damage.totalOutput.racial.Wraith=1.000
 damage.totalOutput.racial.Shadow=1.000
 damage.totalOutput.racial.Drider=1.000
 damage.totalOutput.racial.PurpleWorm=1.000
-damage.totalOutput.racial.Elohim=1.010
+damage.totalOutput.racial.Agathinon=1.010
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=13.000
 damage.pulse.racial.Barbarian=13.000
@@ -240,7 +240,7 @@ damage.pulse.racial.Spectre=10.500
 damage.pulse.racial.Shadow=10.500
 damage.pulse.racial.Drider=12.000
 damage.pulse.racial.PurpleWorm=10.000
-damage.pulse.racial.Elohim=13.000
+damage.pulse.racial.Agathinon=13.000
 damage.totalOutput.class.None=1.000
 damage.totalOutput.class.Warrior=1.000
 damage.totalOutput.class.Ranger=1.010
@@ -401,7 +401,7 @@ spellcast.pulse.racial.Spectre=1.000
 spellcast.pulse.racial.Zombie=1.000
 spellcast.pulse.racial.Drider=1.000
 spellcast.pulse.racial.PurpleWorm=1.000
-spellcast.pulse.racial.Elohim=1.000
+spellcast.pulse.racial.Agathinon=1.000
 [exp]
 exp.factor.racewar.good=2.000
 exp.factor.racewar.evil=1.500
@@ -1330,16 +1330,16 @@ stats.wis.PurpleWorm=10.000
 stats.cha.PurpleWorm=20.000
 stats.kar.PurpleWorm=100.000
 stats.luc.PurpleWorm=100.000
-stats.str.Elohim=105.000
-stats.dex.Elohim=105.000
-stats.agi.Elohim=115.000
-stats.con.Elohim=110.000
-stats.pow.Elohim=120.000
-stats.int.Elohim=100.000
-stats.wis.Elohim=100.000
-stats.cha.Elohim=100.000
-stats.kar.Elohim=100.000
-stats.luc.Elohim=100.000
+stats.str.Agathinon=105.000
+stats.dex.Agathinon=105.000
+stats.agi.Agathinon=115.000
+stats.con.Agathinon=110.000
+stats.pow.Agathinon=120.000
+stats.int.Agathinon=100.000
+stats.wis.Agathinon=100.000
+stats.cha.Agathinon=100.000
+stats.kar.Agathinon=100.000
+stats.luc.Agathinon=100.000
 [innates]
 innate.rrakkma.maxSteps=5.000
 innate.rrakkma.stepPct=5.000
@@ -1371,7 +1371,7 @@ innate.shrug.Spectre=20.000
 innate.shrug.Wraith=35.000
 innate.shrug.Shadow=25.000
 innate.shrug.Drider=55.000
-innate.shrug.Elohim=25.000
+innate.shrug.Agathinon=25.000
 innate.evasion.removechance=15.000
 innate.dualDaggers.pulse=-3.000
 # heals = heals * ( healing_mod * level ) / 100
