properties as they should be in game

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1681,12 +1681,13 @@ track.scan.lag=1.000
 [archery]
 archery.dexPerShot=40.000
 archery.strPerRoomRange=40.000
-archery.hitPenalty=0.900
-archery.rangePenalty=10.000
-archery.diceFactor=3.500
+archery.hitPenalty=0.800
+archery.rangePenalty=25.000
+archery.diceFactor=8.000
 archery.hitrollFactor=0.400
 archery.cursedArrows.mod=1.000
 archery.enchantArrows.mark.duration=300.000
+archery.per.arrow.maximum=165.000
 [prestige]
 prestige.update.secs=5400.000
 prestige.update.decrease.kingdom=200.000
