--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -39,6 +39,8 @@ vamping.vampiricTrance=0.200
 vamping.undeadNpc=0.100
 vamping.innateUndead=0.040
 vamping.battletide=0.250
+vamping.maxHP.NPC_undead=1.250
+vamping.maxHP.PC=1.500
 [map]
 map.horizontalFactor=1.200
 map.verticalFactor=0.600
