--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -29,9 +29,14 @@ dragon.Furious.DamageMod=2.000
 dragon.Rake.Attack.base=60.000
 [vamping]
 vamping.vampiricTouch=0.250
-vamping.vampiricTouch.monks=0.035
+vamping.vampiricTouch.monks=0.070
 vamping.vampiricTouch.antipaladins=0.700
-vamping.vampiricTouch.mercs=0.035
+vamping.vampiricTouch.mercs=0.100
+vamping.vampiricTouch.warriors=0.100
+vamping.vampiricTouch.berserkers=0.100
+vamping.vampiricTouch.rogues=0.100
+vamping.vampiricTouch.paladins=0.100
+vamping.vampiricTouch.rangers=0.100
 vamping.hellfire=1.000
 vamping.hellfire.absorb=0.160
 vamping.battleEcstasy=0.100
