Dharma property added.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -48,6 +48,7 @@ vamping.battletide=0.250
 vamping.maxHP.NPC_undead=1.250
 vamping.maxHP.PC=1.500
 vamping.BTX.others.HP.PC=1.500
+vamping.Dharma.maxhitMod=1.000
 [map]
 map.horizontalFactor=1.200
 map.verticalFactor=0.600
