Adding partial frag property and reducing timer.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -127,7 +127,9 @@ damage.totalOutput.racial.Shade=1.000
 damage.totalOutput.racial.Revenant=1.000
 damage.totalOutput.racial.Goblin=1.000
 damage.totalOutput.racial.Lich=0.950
+damage.totalOutput.racial.PLich=0.950
 damage.totalOutput.racial.Vampire=1.000
+damage.totalOutput.racial.PVampire=1.000
 damage.totalOutput.racial.DeathKnight=1.000
 damage.totalOutput.racial.ShadowBeast=1.000
 damage.totalOutput.racial.StormGiant=1.000
@@ -204,7 +206,9 @@ damage.pulse.racial.Shade=13.000
 damage.pulse.racial.Revenant=15.000
 damage.pulse.racial.Goblin=12.000
 damage.pulse.racial.Lich=13.000
+damage.pulse.racial.PLich=13.000
 damage.pulse.racial.Vampire=11.000
+damage.pulse.racial.PVampire=11.000
 damage.pulse.racial.DeathKnight=14.000
 damage.pulse.racial.ShadowBeast=12.000
 damage.pulse.racial.StormGiant=14.500
@@ -216,10 +220,9 @@ damage.pulse.racial.FireElemental=12.000
 damage.pulse.racial.AirElemental=11.000
 damage.pulse.racial.WaterElemental=13.000
 damage.pulse.racial.EarthElemental=14.000
-damage.pulse.racial.Demon=12.000
+damage.pulse.racial.Demon=13.500
 damage.pulse.racial.Devil=12.000
 damage.pulse.racial.Undead=12.000
-damage.pulse.racial.Vampire=13.000
 damage.pulse.racial.Ghost=12.000
 damage.pulse.racial.Lycanthrope=12.000
 damage.pulse.racial.Giant=16.000
@@ -266,7 +269,7 @@ damage.totalOutput.class.Psionicist=0.800
 damage.totalOutput.class.Paladin=1.000
 damage.totalOutput.class.Anti-Paladin=1.040
 damage.totalOutput.class.Cleric=0.900
-damage.totalOutput.class.Monk=0.700
+damage.totalOutput.class.Monk=0.750
 damage.totalOutput.class.Druid=0.900
 damage.totalOutput.class.Shaman=0.900
 damage.totalOutput.class.Ethermancer=0.900
@@ -366,7 +369,9 @@ spellcast.pulse.racial.Shade=1.000
 spellcast.pulse.racial.Revenant=1.000
 spellcast.pulse.racial.Goblin=1.000
 spellcast.pulse.racial.Lich=1.000
+spellcast.pulse.racial.PLich=1.000
 spellcast.pulse.racial.Vampire=1.000
+spellcast.pulse.racial.PVampire=1.000
 spellcast.pulse.racial.DeathKnight=1.000
 spellcast.pulse.racial.ShadowBeast=1.000
 spellcast.pulse.racial.StormGiant=1.500
@@ -381,7 +386,6 @@ spellcast.pulse.racial.EarthElemental=1.000
 spellcast.pulse.racial.Demon=1.000
 spellcast.pulse.racial.Devil=1.000
 spellcast.pulse.racial.Undead=1.000
-spellcast.pulse.racial.Vampire=1.000
 spellcast.pulse.racial.Ghost=1.000
 spellcast.pulse.racial.Lycanthrope=1.000
 spellcast.pulse.racial.Giant=1.000
@@ -832,6 +836,16 @@ stats.wis.Lich=80.000
 stats.cha.Lich=50.000
 stats.kar.Lich=100.000
 stats.luc.Lich=100.000
+stats.str.PLich=85.000
+stats.dex.PLich=75.000
+stats.agi.PLich=100.000
+stats.con.PLich=100.000
+stats.pow.PLich=180.000
+stats.int.PLich=140.000
+stats.wis.PLich=80.000
+stats.cha.PLich=50.000
+stats.kar.PLich=100.000
+stats.luc.PLich=100.000
 stats.str.Vampire=105.000
 stats.dex.Vampire=105.000
 stats.agi.Vampire=115.000
@@ -842,6 +856,16 @@ stats.wis.Vampire=100.000
 stats.cha.Vampire=100.000
 stats.kar.Vampire=100.000
 stats.luc.Vampire=100.000
+stats.str.PVampire=105.000
+stats.dex.PVampire=105.000
+stats.agi.PVampire=115.000
+stats.con.PVampire=110.000
+stats.pow.PVampire=110.000
+stats.int.PVampire=100.000
+stats.wis.PVampire=100.000
+stats.cha.PVampire=100.000
+stats.kar.PVampire=100.000
+stats.luc.PVampire=100.000
 stats.str.DeathKnight=120.000
 stats.dex.DeathKnight=95.000
 stats.agi.DeathKnight=95.000
@@ -1384,8 +1408,10 @@ innate.shrug.Phantom=20.000
 innate.shrug.Half-Elf=20.000
 innate.shrug.Human=20.000
 innate.shrug.Lich=60.000
+innate.shrug.PLich=60.000
 innate.shrug.DrowElf=65.000
 innate.shrug.Vampire=50.000
+innate.shrug.PVampire=50.000
 innate.shrug.AirElemental=20.000
 innate.shrug.WaterElemental=20.000
 innate.shrug.FireElemental=20.000
@@ -1743,3 +1769,5 @@ price.home.plat=50.000
 berserker.takedam.mod=0.500
 [Summoned_Mounts]
 mount.summoned.FactorMod=0.750
+[Spilt Blood Task]
+epic.frag.thrill.duration=45.000
