--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -47,8 +47,10 @@ vamping.innateUndead=0.040
 vamping.battletide=0.250
 vamping.maxHP.NPC_undead=1.250
 vamping.maxHP.PC=1.500
-vamping.BTX.others.HP.PC=1.500
+vamping.maxHP.all=1.500
+vamping.BTX.others.HP.PC=1.250
 vamping.Dharma.maxhitMod=1.000
+vamping.undead.hpCap=1.500
 [map]
 map.horizontalFactor=1.200
 map.verticalFactor=0.600
@@ -140,9 +142,9 @@ damage.totalOutput.racial.Harpy=1.000
 damage.totalOutput.racial.Gargoyle=1.000
 damage.totalOutput.racial.FireElemental=1.000
 damage.totalOutput.racial.AirElemental=1.000
-damage.totalOutput.racial.WaterElemental=1.000
+damage.totalOutput.racial.WaterElemental=1.100
 damage.totalOutput.racial.EarthElemental=1.000
-damage.totalOutput.racial.Demon=1.080
+damage.totalOutput.racial.Demon=1.200
 damage.totalOutput.racial.Devil=1.350
 damage.totalOutput.racial.Undead=1.000
 damage.totalOutput.racial.Ghost=1.000
@@ -157,17 +159,17 @@ damage.totalOutput.racial.Reptile=1.000
 damage.totalOutput.racial.Snake=1.000
 damage.totalOutput.racial.Insect=0.900
 damage.totalOutput.racial.Arachnid=1.000
-damage.totalOutput.racial.AquaticAnimal=1.000
+damage.totalOutput.racial.AquaticAnimal=1.200
 damage.totalOutput.racial.FlyingAnimal=1.000
 damage.totalOutput.racial.Quadraped=1.000
-damage.totalOutput.racial.Primate=1.000
+damage.totalOutput.racial.Primate=1.200
 damage.totalOutput.racial.Humanoid=1.000
-damage.totalOutput.racial.Animal=1.000
+damage.totalOutput.racial.Animal=1.100
 damage.totalOutput.racial.Plant=1.100
 damage.totalOutput.racial.Herbivore=1.000
 damage.totalOutput.racial.Carnivore=1.000
 damage.totalOutput.racial.Parasite=1.000
-damage.totalOutput.racial.Beholder=1.100
+damage.totalOutput.racial.Beholder=1.300
 damage.totalOutput.racial.Dracolich=1.100
 damage.totalOutput.racial.Slime=1.000
 damage.totalOutput.racial.Githzerai=0.950
@@ -180,9 +182,9 @@ damage.totalOutput.racial.Skeleton=1.000
 damage.totalOutput.racial.Zombie=1.000
 damage.totalOutput.racial.Spectre=1.000
 damage.totalOutput.racial.Wraith=1.000
-damage.totalOutput.racial.Shadow=1.000
+damage.totalOutput.racial.Shadow=1.100
 damage.totalOutput.racial.Drider=1.000
-damage.totalOutput.racial.PurpleWorm=1.000
+damage.totalOutput.racial.PurpleWorm=1.200
 damage.totalOutput.racial.Agathinon=1.010
 damage.pulse.racial.None=13.000
 damage.pulse.racial.Human=13.000
@@ -268,7 +270,7 @@ damage.totalOutput.class.Warrior=1.000
 damage.totalOutput.class.Ranger=1.010
 damage.totalOutput.class.Psionicist=0.800
 damage.totalOutput.class.Paladin=1.000
-damage.totalOutput.class.Anti-Paladin=1.040
+damage.totalOutput.class.Anti-Paladin=1.000
 damage.totalOutput.class.Cleric=0.900
 damage.totalOutput.class.Monk=0.750
 damage.totalOutput.class.Druid=0.900
@@ -285,7 +287,7 @@ damage.totalOutput.class.Thief=0.900
 damage.totalOutput.class.Warlock=0.900
 damage.totalOutput.class.MindFlayer=0.900
 damage.totalOutput.class.Alchemist=1.000
-damage.totalOutput.class.Berserker=0.900
+damage.totalOutput.class.Berserker=0.800
 damage.totalOutput.class.Reaver=1.000
 damage.totalOutput.class.Illusionist=0.800
 damage.totalOutput.class.Unholy-Piper=1.000
