syncing duris.properties

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -311,7 +311,7 @@ damage.totalOutput.class.Cleric=0.900
 damage.totalOutput.class.Monk=0.900
 damage.totalOutput.class.Druid=0.900
 damage.totalOutput.class.Shaman=0.900
-damage.totalOutput.class.Ethermancer=0.900
+damage.totalOutput.class.Ethermancer=1.000
 damage.totalOutput.class.Sorcerer=0.800
 damage.totalOutput.class.Necromancer=1.000
 damage.totalOutput.class.Conjurer=0.800
@@ -339,7 +339,7 @@ damage.pulse.class.Cleric=1.000
 damage.pulse.class.Monk=-0.500
 damage.pulse.class.Druid=1.000
 damage.pulse.class.Shaman=1.000
-damage.pulse.class.Ethermancer=1.000
+damage.pulse.class.Ethermancer=0.000
 damage.pulse.class.Sorcerer=2.000
 damage.pulse.class.Necromancer=2.000
 damage.pulse.class.Conjurer=2.000
@@ -1329,7 +1329,7 @@ stats.wis.Slime=5.000
 stats.cha.Slime=5.000
 stats.kar.Slime=5.000
 stats.luc.Slime=100.000
-stats.str.Githzerai=85.000
+stats.str.Githzerai=100.000
 stats.dex.Githzerai=115.000
 stats.agi.Githzerai=110.000
 stats.con.Githzerai=109.000
@@ -1912,7 +1912,6 @@ gain.exp.mod.ranger=1.000
 gain.exp.mod.mindflayer=1.000
 gain.exp.mod.reaver=1.000
 gain.exp.mod.other=0.250
-gain.exp.mod.easyraces=0.750
 gain.exp.mod.player.necro=0.750
 gain.exp.mod.player.necro.tier=0.500
 gain.exp.mod.player.merc=0.750
@@ -1922,8 +1921,8 @@ gain.exp.mod.victim.act.nomemory=0.250
 gain.exp.mod.victim.location.hometown=0.200
 gain.exp.mod.TotalOverall=0.750
 gain.exp.mod.player.level.thirtyone=0.500
-gain.exp.mod.player.level.fortyone=0.500
-gain.exp.mod.player.level.fiftyone=1.000
+gain.exp.mod.player.level.fortyone=0.250
+gain.exp.mod.player.level.fiftyone=0.100
 gain.exp.mod.player.level.fiftyfive=1.000
 gain.exp.mod.victim.ability.breath.weapon=1.250
 gain.exp.mod.victim.race.Agathinon=1.000
@@ -1931,7 +1930,7 @@ gain.exp.mod.victim.race.AirElemental=1.000
 gain.exp.mod.victim.race.Angel=3.000
 gain.exp.mod.victim.race.Animal=0.500
 gain.exp.mod.victim.race.AquaticAnimal=0.500
-gain.exp.mod.victim.race.Arachnid=0.250
+gain.exp.mod.victim.race.Arachnid=0.100
 gain.exp.mod.victim.race.Barbarian=1.000
 gain.exp.mod.victim.race.Beholder=3.000
 gain.exp.mod.victim.race.Beholderkin=1.000
@@ -1943,7 +1942,7 @@ gain.exp.mod.victim.race.Devil=3.000
 gain.exp.mod.victim.race.Dracolich=2.000
 gain.exp.mod.victim.race.Dragon=3.000
 gain.exp.mod.victim.race.Dragonkin=1.000
-gain.exp.mod.victim.race.Drider=1.000
+gain.exp.mod.victim.race.Drider=1.250
 gain.exp.mod.victim.race.DrowElf=1.000
 gain.exp.mod.victim.race.DuergarDwarf=1.000
 gain.exp.mod.victim.race.EarthElemental=1.000
@@ -1953,7 +1952,7 @@ gain.exp.mod.victim.race.FireElemental=1.000
 gain.exp.mod.victim.race.FlyingAnimal=0.500
 gain.exp.mod.victim.race.Gargoyle=1.000
 gain.exp.mod.victim.race.Ghost=1.000
-gain.exp.mod.victim.race.Giant=1.000
+gain.exp.mod.victim.race.Giant=1.500
 gain.exp.mod.victim.race.Githyanki=1.000
 gain.exp.mod.victim.race.Githzerai=1.000
 gain.exp.mod.victim.race.Gnome=1.000
@@ -1973,14 +1972,14 @@ gain.exp.mod.victim.race.Lich=1.000
 gain.exp.mod.victim.race.Lycanthrope=1.000
 gain.exp.mod.victim.race.Minotaur=1.000
 gain.exp.mod.victim.race.MountainDwarf=1.000
-gain.exp.mod.victim.race.Ogre=1.000
+gain.exp.mod.victim.race.Ogre=1.150
 gain.exp.mod.victim.race.Orc=1.000
 gain.exp.mod.victim.race.Orog=1.000
 gain.exp.mod.victim.race.PLich=1.000
 gain.exp.mod.victim.race.PVampire=1.000
 gain.exp.mod.victim.race.Parasite=0.100
 gain.exp.mod.victim.race.Phantom=1.000
-gain.exp.mod.victim.race.Plant=1.000
+gain.exp.mod.victim.race.Plant=0.250
 gain.exp.mod.victim.race.Primate=1.000
 gain.exp.mod.victim.race.PurpleWorm=1.000
 gain.exp.mod.victim.race.Quadruped=0.500
@@ -2009,3 +2008,5 @@ world.quest.exp.level.twenty=2.000
 world.quest.exp.level.thirty=1.500
 world.quest.exp.level.forty=1.000
 world.quest.exp.level.other=0.500
+[Sales]
+stats.sell.log=5000.000
