Committing recent duris properties.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -28,7 +28,7 @@ artifact.feeding.switch.timer.min=120.000
 artifact.feeding.switch.lootallowance.min=30.000
 [backstab]
 #final multiplier is applied to both dices and damroll
-backstab.finalMultiplier=1.000
+backstab.finalMultiplier=2.000
 #multiplier for dice only
 backstab.diceMultiplier=1.000
 #damage roll mod
@@ -106,8 +106,10 @@ damage.reduction.soulshield.spell=0.800
 damage.reduction.protLiving=0.900
 damage.reduction.protAnimal=0.800
 damage.reduction.protElement=0.900
+damage.reduction.protFire.Troll=0.950
+damage.reduction.fireColdShield.Troll=0.800
 damage.reduction.fireColdShield=0.550
-damage.reduction.towerOfIronWill=0.750
+damage.reduction.towerOfIronWill=0.666
 damage.reduction.EnergyContainment=0.750
 damage.reduction.elementalAffinity=0.333
 damage.reduction.bloodAlliance=0.400
@@ -131,7 +133,7 @@ damage.increase.elementalist=1.150
 damage.increase.fireColdShield=2.000
 damage.increase.phantasmalForm=1.000
 damage.increase.vulnCold=1.350
-damage.increase.vulnFire=1.800
+damage.increase.vulnFire=2.100
 damage.shield.fireCold=0.500
 damage.shield.neg=0.250
 damage.shield.soul=0.200
@@ -307,7 +309,7 @@ damage.pulse.racial.PurpleWorm=10.000
 damage.pulse.racial.Agathinon=13.000
 damage.totalOutput.class.None=1.000
 damage.totalOutput.class.Warrior=1.000
-damage.totalOutput.class.Ranger=1.010
+damage.totalOutput.class.Ranger=1.150
 damage.totalOutput.class.Psionicist=0.800
 damage.totalOutput.class.Paladin=1.000
 damage.totalOutput.class.Anti-Paladin=0.800
@@ -331,8 +333,8 @@ damage.totalOutput.class.Berserker=0.900
 damage.totalOutput.class.Reaver=1.000
 damage.totalOutput.class.Illusionist=0.800
 damage.totalOutput.class.Unholy-Piper=1.000
-damage.totalOutput.class.Dreadlord=1.200
-damage.totalOutput.class.Avenger=1.050
+damage.totalOutput.class.Dreadlord=1.150
+damage.totalOutput.class.Avenger=1.150
 damage.pulse.class.None=0.000
 damage.pulse.class.Warrior=0.000
 damage.pulse.class.Ranger=-1.000
@@ -476,7 +478,7 @@ exp.factor.racewar.evil=1.000
 exp.factor.racewar.undead=1.000
 exp.factor.damage=0.850
 exp.factor.healing.class.penalty=0.250
-exp.factor.healing.pets=0.500
+exp.factor.healing.pets=0.100
 exp.factor.healing=1.000
 exp.factor.melee=0.100
 exp.factor.kill=0.650
@@ -506,12 +508,12 @@ exp.factor.antipaladin.vsGood=1.333
 exp.factor.Minotaur=0.900
 exp.factor.Thri-kreen=0.650
 exp.factor.Mountain=0.900
-exp.factor.Agathinon=0.500
+exp.factor.Agathinon=1.000
 exp.factor.Lich=0.200
-exp.factor.Vampire=0.500
+exp.factor.Vampire=1.000
 exp.factor.Half-elf=1.000
 exp.factor.Githzerai=0.900
-exp.factor.Gnome=1.250
+exp.factor.Gnome=1.500
 exp.factor.Centaur=0.900
 exp.factor.Halfling=1.000
 exp.factor.Grey=0.800
@@ -640,7 +642,7 @@ spell.chaosshield.perc=10.000
 spell.berserk.casting.starMod=1.000
 spell.berserk.casting.mistarget.perc=10.000
 spell.spikeGrowth.affectChance=10.000
-spell.lendHealth.healRatio=1.000
+spell.lendHealth.healRatio=0.500
 spell.power.word.Stun=1.200
 spell.richness.feeblemind=1.008
 spell.richness.feeblemind.spellLoss.divisor=5.000
@@ -1476,19 +1478,20 @@ stats.cha.Agathinon=100.000
 stats.kar.Agathinon=100.000
 stats.luc.Agathinon=90.000
 [innates]
+innate.movement.bonus.halfling=20.000
 innate.rrakkma.maxSteps=5.000
 innate.rrakkma.stepPct=5.000
 innate.warcallersfury.maxSteps=10.000
 innate.shrug.Dragonkin=20.000
 innate.shrug.Illithid=85.000
-innate.shrug.GreyElf=40.000
-innate.shrug.Githyanki=40.000
+innate.shrug.GreyElf=30.000
+innate.shrug.Githyanki=25.000
 innate.shrug.Phantom=20.000
-innate.shrug.Half-Elf=20.000
+innate.shrug.Half-Elf=10.000
 innate.shrug.Human=0.001
-innate.shrug.Lich=50.000
-innate.shrug.PLich=50.000
-innate.shrug.DrowElf=70.000
+innate.shrug.Lich=40.000
+innate.shrug.PLich=40.000
+innate.shrug.DrowElf=50.000
 innate.shrug.Vampire=50.000
 innate.shrug.PVampire=50.000
 innate.shrug.AirElemental=20.000
@@ -1534,6 +1537,8 @@ innate.timer.secs.pyrokinesis=20.000
 innate.timer.secs.drainLife=60.000
 innate.timer.secs.hatred=4.000
 innate.timer.secs.foundry=120.000
+innate.timer.dura.godCall.Tempus.Cleric=5.000
+innate.timer.dura.godCall.Tempus.Other=3.000
 innate.timer.secs.godCall=900.000
 innate.timer.secs.godCallSpec=600.000
 innate.timer.secs.bite=12.000
@@ -1628,6 +1633,7 @@ skill.anatomy.NPC=5.000
 skill.PC.PET.Guard=0.750
 skill.trample.Knight.DamageMultiplier=2.500
 skill.trample.knockdown=0.750
+skill.whirlwind.movement.drain=100.000
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
@@ -1792,8 +1798,12 @@ nexusStones.bonus.exp=0.150
 nexusStones.bonus.cargo=0.150
 nexusStones.bonus.prestige=0.150
 [worldQuest]
+worldQuest.level.high.value=6.000
+worldQuest.level.low.value=6.000
 worldQuest.abandon.mod=1.000
 worldQuest.maxPerDay=7.000
+worldQuest.maxPerDay.goods=10.000
+worldQuest.maxPerDay.evils=7.000
 [mines]
 mines.maxSurfaceMap=50.000
 mines.maxTharnRift=25.000
@@ -1895,14 +1905,16 @@ epic.witch.multiplier=1.250
 [Movement regen]
 move.regen.prone=1.250
 move.regen.sitting=1.130
-move.regen.sleeping=1.750
-move.regen.resting=1.330
+move.regen.sleeping=2.250
+move.regen.resting=1.500
 [Gain exp from limits.c]
+gain.exp.mod.res.evil.52=0.300
+gain.exp.mod.res.normal=0.600
 gain.exp.mod.player.cleric=1.150
-gain.exp.mod.warrior=0.500
+gain.exp.mod.warrior=0.400
 gain.exp.mod.mercenary=0.750
-gain.exp.mod.avenger=0.500
-gain.exp.mod.dreadlord=0.750
+gain.exp.mod.avenger=0.800
+gain.exp.mod.dreadlord=0.800
 gain.exp.mod.sorcerer=1.250
 gain.exp.mod.conjurer=1.250
 gain.exp.mod.necromancer=1.250
@@ -1927,9 +1939,9 @@ gain.exp.mod.victim.race.elite=4.000
 gain.exp.mod.victim.act.nomemory=0.250
 gain.exp.mod.victim.location.hometown=0.200
 gain.exp.mod.TotalOverall=1.000
-gain.exp.mod.player.level.thirtyone=0.500
-gain.exp.mod.player.level.fortyone=0.250
-gain.exp.mod.player.level.fiftyone=0.100
+gain.exp.mod.player.level.thirtyone=0.750
+gain.exp.mod.player.level.fortyone=1.000
+gain.exp.mod.player.level.fiftyone=0.250
 gain.exp.mod.player.level.fiftyfive=1.000
 gain.exp.mod.victim.ability.breath.weapon=1.250
 gain.exp.mod.victim.race.Agathinon=1.000
@@ -1948,11 +1960,11 @@ gain.exp.mod.victim.race.Demon=3.000
 gain.exp.mod.victim.race.Devil=3.000
 gain.exp.mod.victim.race.Dracolich=2.000
 gain.exp.mod.victim.race.Dragon=3.000
-gain.exp.mod.victim.race.Dragonkin=1.000
+gain.exp.mod.victim.race.Dragonkin=1.300
 gain.exp.mod.victim.race.Drider=1.250
-gain.exp.mod.victim.race.DrowElf=1.150
+gain.exp.mod.victim.race.DrowElf=1.250
 gain.exp.mod.victim.race.DuergarDwarf=1.000
-gain.exp.mod.victim.race.EarthElemental=1.000
+gain.exp.mod.victim.race.EarthElemental=1.250
 gain.exp.mod.victim.race.Efreet=2.000
 gain.exp.mod.victim.race.Faerie=1.000
 gain.exp.mod.victim.race.FireElemental=1.250
@@ -1975,7 +1987,7 @@ gain.exp.mod.victim.race.Human=1.000
 gain.exp.mod.victim.race.Humanoid=1.000
 gain.exp.mod.victim.race.Illithid=1.200
 gain.exp.mod.victim.race.Insect=0.100
-gain.exp.mod.victim.race.Lich=1.250
+gain.exp.mod.victim.race.Lich=1.500
 gain.exp.mod.victim.race.Lycanthrope=1.000
 gain.exp.mod.victim.race.Minotaur=1.000
 gain.exp.mod.victim.race.MountainDwarf=1.000
@@ -1988,7 +2000,7 @@ gain.exp.mod.victim.race.Parasite=0.100
 gain.exp.mod.victim.race.Phantom=1.250
 gain.exp.mod.victim.race.Plant=0.250
 gain.exp.mod.victim.race.Primate=1.000
-gain.exp.mod.victim.race.PurpleWorm=1.000
+gain.exp.mod.victim.race.PurpleWorm=1.250
 gain.exp.mod.victim.race.Quadruped=0.500
 gain.exp.mod.victim.race.Rakshasa=1.000
 gain.exp.mod.victim.race.Reptile=0.750
@@ -1999,7 +2011,7 @@ gain.exp.mod.victim.race.ShadowBeast=1.000
 gain.exp.mod.victim.race.Skeleton=1.250
 gain.exp.mod.victim.race.Slime=0.250
 gain.exp.mod.victim.race.Snake=0.500
-gain.exp.mod.victim.race.SnowOgre=1.000
+gain.exp.mod.victim.race.SnowOgre=1.250
 gain.exp.mod.victim.race.Spectre=1.250
 gain.exp.mod.victim.race.StormGiant=1.000
 gain.exp.mod.victim.race.Thri-Kreen=1.000
@@ -2015,8 +2027,8 @@ gain.exp.mod.player.death.level.50.andUnder=0.100
 [World Quest Exps]
 world.quest.exp.level.30.andUnder=1.000
 world.quest.exp.level.40.andUnder=0.800
-world.quest.exp.level.50.andUnder=0.100
-world.quest.exp.level.55.andUnder=0.050
+world.quest.exp.level.50.andUnder=0.333
+world.quest.exp.level.55.andUnder=0.100
 world.quest.exp.level.other.andUnder=0.010
 [Sales]
 stats.sell.log=5000.000
