Updating duris properties to svn.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -43,7 +43,7 @@ backstab.AwareModifier=0.700
 dragon.Breath.area.minChance=60.000
 dragon.Breath.area.chanceStep=20.000
 dragon.Breath.savedDamage=2.000
-dragon.Breath.DamageMod=60.000
+dragon.Breath.DamageMod=30.000
 dragon.Breath.SavingThrowMod=0.000
 dragon.Rake.DamageMod=1.000
 dragon.Furious.DamageMod=2.000
@@ -101,9 +101,10 @@ damage.reduction.sanctuary.paladin.groupMod=0.030
 damage.reduction.trollskin=0.800
 damage.reduction.barkskin=0.950
 damage.reduction.berserk=0.900
-damage.reduction.soulshield.melee=0.800
-damage.reduction.soulshield.spell=0.800
-damage.reduction.protLiving=0.900
+damage.reduction.soulshield.melee=0.900
+damage.reduction.soulshield.spell=0.900
+damage.reduction.negshield.spell=0.600
+damage.reduction.protLiving=0.950
 damage.reduction.protAnimal=0.800
 damage.reduction.protElement=0.900
 damage.reduction.protFire.Troll=0.950
@@ -473,13 +474,13 @@ spellcast.pulse.racial.PurpleWorm=1.000
 spellcast.pulse.racial.Agathinon=1.000
 [exp]
 exp.factor.Elite.mob=1.500
-exp.factor.racewar.good=1.000
+exp.factor.racewar.good=1.100
 exp.factor.racewar.evil=1.000
 exp.factor.racewar.undead=1.000
-exp.factor.damage=0.850
+exp.factor.damage=0.010
 exp.factor.healing.class.penalty=0.250
 exp.factor.healing.pets=0.100
-exp.factor.healing=1.000
+exp.factor.healing=10.000
 exp.factor.melee=0.100
 exp.factor.kill=0.650
 exp.required.5=2000.000
@@ -508,9 +509,9 @@ exp.factor.antipaladin.vsGood=1.333
 exp.factor.Minotaur=0.900
 exp.factor.Thri-kreen=0.650
 exp.factor.MountainDwarf=0.900
-exp.factor.Agathinon=1.000
+exp.factor.Agathinon=0.500
 exp.factor.Lich=0.200
-exp.factor.Vampire=1.000
+exp.factor.Vampire=0.500
 exp.factor.Half-elf=1.000
 exp.factor.Githzerai=0.900
 exp.factor.Gnome=1.500
@@ -791,7 +792,7 @@ stats.str.Troll=130.000
 stats.dex.Troll=110.000
 stats.agi.Troll=115.000
 stats.con.Troll=145.000
-stats.pow.Troll=85.000
+stats.pow.Troll=65.000
 stats.int.Troll=50.000
 stats.wis.Troll=80.000
 stats.cha.Troll=50.000
@@ -1587,7 +1588,7 @@ skill.slip.fightingPenalty=20.000
 skill.cost.practice=5111.000
 skill.cap.multi.mod.primarySkill=1.000
 skill.cap.multi.mod.secondarySkill=0.950
-skill.practice.relativeCap=0.750
+skill.practice.relativeCap=65.000
 skill.timer.secs.smiteEvil=3.000
 skill.shieldBlock.blessBonus=1.200
 skill.guard.agiDiffMaxBonus=5.000
@@ -1633,7 +1634,7 @@ skill.anatomy.NPC=5.000
 skill.PC.PET.Guard=0.750
 skill.trample.Knight.DamageMultiplier=2.500
 skill.trample.knockdown=0.750
-skill.whirlwind.movement.drain=100.000
+skill.whirlwind.movement.drain=60.000
 [terrains]
 terrain.forest.lostChance=0.000
 movement.forest.lostChance=0.000
@@ -1694,7 +1695,7 @@ saves.petri.racial.Troll=10.000
 saves.spell.class.Paladin=-10.000
 saves.spell.class.Avenger=0.000
 [raid]
-raid.min.slots=0.000
+raid.min.slots=12.000
 [epic]
 epic.multiclass.EpicSkillCost=2.000
 epic.multiclass.EpicPlatCost=3.000
@@ -1800,13 +1801,13 @@ nexusStones.bonus.prestige=0.150
 [worldQuest]
 worldQuest.level.high.value=6.000
 worldQuest.level.low.value=6.000
-worldQuest.abandon.mod=1.000
+worldQuest.abandon.mod=0.500
 worldQuest.maxPerDay=7.000
 worldQuest.maxPerDay.goods=10.000
-worldQuest.maxPerDay.evils=7.000
+worldQuest.maxPerDay.evils=14.000
 [mines]
-mines.maxSurfaceMap=50.000
-mines.maxTharnRift=25.000
+mines.maxSurfaceMap=75.000
+mines.maxTharnRift=5.000
 mines.reloadMins=30.000
 [zealots]
 zealots.memHitChance=3.000
@@ -1908,9 +1909,9 @@ move.regen.sitting=1.130
 move.regen.sleeping=2.250
 move.regen.resting=1.500
 [Gain exp from limits.c]
-gain.exp.mod.res.evil.52=0.300
-gain.exp.mod.res.evil=0.500
-gain.exp.mod.res.normal=0.600
+gain.exp.mod.res.evil.52=0.400
+gain.exp.mod.res.evil=0.600
+gain.exp.mod.res.normal=0.750
 gain.exp.mod.player.cleric=1.050
 gain.exp.mod.warrior=0.400
 gain.exp.mod.mercenary=0.750
@@ -1940,9 +1941,9 @@ gain.exp.mod.victim.race.elite=4.000
 gain.exp.mod.victim.act.nomemory=0.250
 gain.exp.mod.victim.location.hometown=0.200
 gain.exp.mod.TotalOverall=1.000
-gain.exp.mod.player.level.thirtyone=0.750
+gain.exp.mod.player.level.thirtyone=1.000
 gain.exp.mod.player.level.fortyone=1.000
-gain.exp.mod.player.level.fiftyone=0.250
+gain.exp.mod.player.level.fiftyone=0.666
 gain.exp.mod.player.level.fiftyfive=1.000
 gain.exp.mod.victim.ability.breath.weapon=1.250
 gain.exp.mod.victim.race.Agathinon=1.000
@@ -1957,8 +1958,8 @@ gain.exp.mod.victim.race.Beholderkin=1.000
 gain.exp.mod.victim.race.Carnivore=0.750
 gain.exp.mod.victim.race.Centaur=1.000
 gain.exp.mod.victim.race.DeathKnight=1.250
-gain.exp.mod.victim.race.Demon=3.000
-gain.exp.mod.victim.race.Devil=3.000
+gain.exp.mod.victim.race.Demon=1.500
+gain.exp.mod.victim.race.Devil=1.500
 gain.exp.mod.victim.race.Dracolich=2.000
 gain.exp.mod.victim.race.Dragon=3.000
 gain.exp.mod.victim.race.Dragonkin=1.300
@@ -2032,4 +2033,4 @@ world.quest.exp.level.50.andUnder=0.333
 world.quest.exp.level.55.andUnder=0.100
 world.quest.exp.level.other.andUnder=0.010
 [Sales]
-stats.sell.log=5000.000
+stats.sell.log=20000.000
