Removed epic zone frequency mod system and added alignment system

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1725,6 +1725,7 @@ epic.list.limit=10.000
 epic.zoneTrophy.size=10000.000
 epic.zoneTrophy.mod=1.000
 epic.zoneTrophy.maxMods=0.000
+epic.zone.alignmentMod=0.100
 epic.frag.threshold=0.100
 epic.frag.amount=60.000
 epic.touch.maxPayoutFactor=1.500
