--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2085,5 +2085,7 @@ guildhalls.construction.platinum.upgrade.window=5000.000
 guildhalls.construction.points.upgrade.window=10.000
 guildhalls.construction.platinum.upgrade.heal=7500.000
 guildhalls.construction.points.upgrade.heal=15.000
+guildhalls.construction.platinum.upgrade.bank=10000.000
+guildhalls.construction.points.upgrade.bank=25.000
 guildhalls.construction.platinum.rename=500.000
 guildhalls.construction.points.rename=1.000
