Cleaned up/simplified prestige effects on guild size, removed clan/guild/kingdom stuff

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -568,20 +568,10 @@ timer.mins.physicalNotch=5.000
 timer.mins.mentalNotch=10.000
 timer.secs.mob.skinRefresh=60.000
 timer.mins.statPool=1152.000
-[associations]
-guild.maxOutposts=2.000
-guild.outpost.maxGolem=2.000
-guild.hall.maxGolem=4.000
-guild.golems.pushDuration.secs=24.000
-guild.size.base.clan=5.000
-guild.size.max.clan=24.000
-guild.size.step.clan=50.000
-guild.size.base.guild=25.000
-guild.size.max.guild=34.000
-guild.size.step.guild=100.000
-guild.size.base.kingdom=35.000
-guild.size.max.kingdom=45.000
-guild.size.step.kingdom=500.000
+[guilds]
+guild.size.base=5.000
+guild.size.max=30.000
+guild.size.prestige.step=100.000
 [outposts]
 outpost.materials.apply.rate=1.000
 outpost.materials.death.convert=0.500
@@ -1900,15 +1890,13 @@ archery.lag.hiding.mod=2.400
 archery.lag.isfighting.mod=1.400
 archery.crit.bonus=1.500
 [prestige]
-prestige.gain.pvp=10.000
-prestige.gain.default=20.000
-prestige.gain.leveling=10.000
 prestige.guildedInGroupMinimum=3.000
 prestige.epicsMinimum=4.000
-prestige.guild.required=200000.000
-prestige.alliance.required=300000.000
-prestige.kingdom.required=400000.000
-prestige.locker.required=50000.000
+prestige.gain.pvp=25.000
+prestige.gain.default=20.000
+prestige.gain.leveling=15.000
+prestige.alliance.required=10000.000
+prestige.locker.required=500.000
 prestige.constructionPoints.notch=100.000
 [poison]
 poison.maxDuration.min=4.000
