--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1764,20 +1764,21 @@ auctions.closingPctFee=0.060
 [ships]
 warship.sails.damage.reduction=0.850
 ship.sinking.rewardDivider=3.000
-ship.cargo.activitySecs=1800.000
-ship.contraband.baseConfiscationChance=15.000
-ship.contraband.minPriceMod=0.750
-ship.contraband.maxPriceMod=2.000
+ship.cargo.update.secs=1800.000
+ship.cargo.updateDelayedPrices.secs=3600.000
+ship.contraband.baseConfiscationChance=22.500
+ship.contraband.minPriceMod=0.850
+ship.contraband.maxPriceMod=1.500
 ship.contraband.autoBuyAdjustMod=1.030
-ship.contraband.autoSellAdjustMod=1.030
-ship.contraband.buyAdjustMod=0.002
-ship.contraband.sellAdjustMod=0.002
-ship.cargo.minPriceMod=0.850
-ship.cargo.maxPriceMod=1.500
+ship.contraband.autoSellAdjustMod=0.970
+ship.contraband.buyAdjustMod=0.003
+ship.contraband.sellAdjustMod=0.005
+ship.cargo.minPriceMod=0.900
+ship.cargo.maxPriceMod=1.150
 ship.cargo.autoBuyAdjustMod=1.020
-ship.cargo.autoSellAdjustMod=1.020
+ship.cargo.autoSellAdjustMod=0.980
 ship.cargo.buyAdjustMod=0.001
-ship.cargo.sellAdjustMod=0.001
+ship.cargo.sellAdjustMod=0.002
 [shops]
 shops.sellTrophyMod=0.050
 shops.sellMinPct=0.100
