Updated with new ship variables.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1865,16 +1865,22 @@ ship.cargo.updateDelayedPrices.secs=3600.000
 ship.contraband.baseConfiscationChance=23.000
 ship.contraband.minPriceMod=0.850
 ship.contraband.maxPriceMod=1.300
-ship.contraband.autoBuyAdjustMod=1.010
-ship.contraband.autoSellAdjustMod=0.990
+#ship.contraband.autoBuyAdjustMod=1.010
+#ship.contraband.autoSellAdjustMod=0.990
 ship.contraband.buyAdjustMod=0.003
 ship.contraband.sellAdjustMod=0.010
-ship.cargo.minPriceMod=0.900
-ship.cargo.maxPriceMod=1.150
-ship.cargo.autoBuyAdjustMod=1.010
-ship.cargo.autoSellAdjustMod=0.990
+#ship.cargo.minPriceMod=0.900
+#ship.cargo.maxPriceMod=1.150
+#ship.cargo.autoBuyAdjustMod=1.010
+#ship.cargo.autoSellAdjustMod=0.990
 ship.cargo.buyAdjustMod=0.001
 ship.cargo.sellAdjustMod=0.002
+ship.cargo.autoSellAdjustRate=0.05
+ship.cargo.autoBuyAdjustRate=0.05
+ship.cargo.sellPriceMod=1.0
+ship.cargo.buyPriceMod=1.0
+ship.contraband.autoSellAdjustRate=0.05
+ship.contraband.autoBuyAdjustRate=0.05
 [shops]
 shops.sellTrophyMod=0.050
 shops.sellMinPct=0.100
