added ships.pirate.load.chance 7200 for odorf

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1868,6 +1868,7 @@ auctions.listingFee=1000.000
 auctions.startPricePctFee=0.040
 auctions.closingPctFee=0.060
 [ships]
+ships.pirate.load.chance=7200
 warship.sails.damage.reduction=0.850
 ship.sinking.rewardDivider=3.000
 ship.cargo.update.secs=1800.000
