--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -2347,3 +2347,5 @@ guildhalls.construction.platinum.upgrade.cargo=20000.000
 guildhalls.construction.points.upgrade.cargo=30.000
 [Monks]
 monk.weight.str.modifier.denominator=10.000
+[logs]
+logs.chat.status=0.000
