Fixing crash bug.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -90,6 +90,7 @@ to.hit.RogueTypes=7.000
 to.hit.ClericTypes=6.000
 to.hit.MageTypes=4.000
 to.hit.OtherNPCTypes=10.000
+to.hit.ProtUndead=0.700
 [damage]
 damage.pcs.vs.pets=2.000
 damage.spell.multiplier=1.000
