Adding in a global epic payout factor.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -1971,6 +1971,7 @@ epic.zone.alignmentMod=0.100
 epic.frag.threshold=0.100
 epic.frag.amount=60.000
 epic.touch.maxPayoutFactor=1.500
+epic.touch.PayoutFactor=1.000
 epic.freqMod.tick.waitSecs=3600.000
 epic.freqMod.tick.add=0.002
 epic.freqMod.touch.sub=0.200
