--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -178,10 +178,8 @@ damage.totalOutput.racial.Shade=1.000
 damage.totalOutput.racial.Revenant=1.000
 damage.totalOutput.racial.Goblin=1.000
 damage.totalOutput.racial.Lich=0.950
-damage.totalOutput.racial.PLich=0.950
 damage.totalOutput.racial.Vampire=1.000
 damage.totalOutput.racial.Ghaele=1.000
-damage.totalOutput.racial.PVampire=1.000
 damage.totalOutput.racial.DeathKnight=1.000
 damage.totalOutput.racial.ShadowBeast=1.000
 damage.totalOutput.racial.StormGiant=1.000
@@ -257,7 +255,7 @@ damage.pulse.racial.DrowElf=12.000
 damage.pulse.racial.GreyElf=12.000
 damage.pulse.racial.MountainDwarf=14.000
 damage.pulse.racial.DuergarDwarf=14.000
-damage.pulse.racial.Halfling=13.000
+damage.pulse.racial.Halfling=11.000
 damage.pulse.racial.Gnome=13.000
 damage.pulse.racial.Ogre=16.000
 damage.pulse.racial.Troll=15.000
@@ -272,11 +270,9 @@ damage.pulse.racial.Minotaur=14.000
 damage.pulse.racial.Shade=13.000
 damage.pulse.racial.Revenant=15.000
 damage.pulse.racial.Goblin=12.000
-damage.pulse.racial.Lich=13.000
-damage.pulse.racial.PLich=12.000
+damage.pulse.racial.Lich=12.000
 damage.pulse.racial.Vampire=11.000
 damage.pulse.racial.Ghaele=11.000
-damage.pulse.racial.PVampire=12.000
 damage.pulse.racial.DeathKnight=14.000
 damage.pulse.racial.ShadowBeast=12.000
 damage.pulse.racial.StormGiant=14.500
@@ -335,7 +331,7 @@ damage.pulse.racial.Shadow=10.500
 damage.pulse.racial.Deva=10.500
 damage.pulse.racial.Drider=13.000
 damage.pulse.racial.PurpleWorm=10.000
-damage.pulse.racial.Agathinon=12.000
+damage.pulse.racial.Agathinon=11.000
 damage.pulse.racial.VoidElemental=11.000
 damage.pulse.racial.IceElemental=15.000
 damage.pulse.racial.Eladrin=12.000
@@ -434,36 +430,34 @@ orc.horde.bonus.modifier=1.500
 spellcast.pulse.racial.All=1.000
 spellcast.pulse.racial.None=1.000
 spellcast.pulse.racial.Human=1.000
-spellcast.pulse.racial.Barbarian=1.000
-spellcast.pulse.racial.DrowElf=1.000
-spellcast.pulse.racial.GreyElf=1.000
-spellcast.pulse.racial.MountainDwarf=1.000
-spellcast.pulse.racial.DuergarDwarf=1.000
-spellcast.pulse.racial.Halfling=1.000
-spellcast.pulse.racial.Gnome=1.000
-spellcast.pulse.racial.Ogre=1.000
-spellcast.pulse.racial.Troll=1.000
-spellcast.pulse.racial.Half-Elf=1.000
-spellcast.pulse.racial.Illithid=1.000
+spellcast.pulse.racial.Barbarian=1.100
+spellcast.pulse.racial.DrowElf=0.900
+spellcast.pulse.racial.GreyElf=0.900
+spellcast.pulse.racial.MountainDwarf=1.050
+spellcast.pulse.racial.DuergarDwarf=1.050
+spellcast.pulse.racial.Halfling=0.600
+spellcast.pulse.racial.Gnome=0.800
+spellcast.pulse.racial.Ogre=1.200
+spellcast.pulse.racial.Troll=1.100
+spellcast.pulse.racial.Half-Elf=0.950
+spellcast.pulse.racial.Illithid=0.500
 spellcast.pulse.racial.Orc=1.000
 spellcast.pulse.racial.Orog=1.000
 spellcast.pulse.racial.Thri-Kreen=1.000
-spellcast.pulse.racial.Centaur=1.000
+spellcast.pulse.racial.Centaur=1.100
 spellcast.pulse.racial.Githyanki=1.000
-spellcast.pulse.racial.Minotaur=1.000
-spellcast.pulse.racial.Shade=1.000
-spellcast.pulse.racial.Revenant=1.000
-spellcast.pulse.racial.Goblin=1.000
-spellcast.pulse.racial.Lich=1.000
-spellcast.pulse.racial.PLich=1.000
-spellcast.pulse.racial.Vampire=1.000
-spellcast.pulse.racial.PVampire=1.000
-spellcast.pulse.racial.DeathKnight=1.000
-spellcast.pulse.racial.ShadowBeast=1.000
+spellcast.pulse.racial.Minotaur=1.200
+spellcast.pulse.racial.Shade=0.900
+spellcast.pulse.racial.Revenant=1.100
+spellcast.pulse.racial.Goblin=0.800
+spellcast.pulse.racial.Lich=0.800
+spellcast.pulse.racial.Vampire=0.900
+spellcast.pulse.racial.DeathKnight=0.900
+spellcast.pulse.racial.ShadowBeast=1.100
 spellcast.pulse.racial.StormGiant=1.500
-spellcast.pulse.racial.Wight=1.000
-spellcast.pulse.racial.Phantom=1.000
-spellcast.pulse.racial.Harpy=1.000
+spellcast.pulse.racial.Wight=1.200
+spellcast.pulse.racial.Phantom=0.800
+spellcast.pulse.racial.Harpy=0.700
 spellcast.pulse.racial.Gargoyle=1.000
 spellcast.pulse.racial.FireElemental=1.000
 spellcast.pulse.racial.AirElemental=1.000
@@ -474,12 +468,12 @@ spellcast.pulse.racial.Devil=1.000
 spellcast.pulse.racial.Undead=1.000
 spellcast.pulse.racial.Ghost=1.000
 spellcast.pulse.racial.Lycanthrope=1.000
-spellcast.pulse.racial.Giant=1.000
+spellcast.pulse.racial.Giant=1.300
 spellcast.pulse.racial.HalfOrc=1.000
-spellcast.pulse.racial.Golem=1.000
+spellcast.pulse.racial.Golem=1.200
 spellcast.pulse.racial.Faerie=1.000
-spellcast.pulse.racial.Dragon=1.000
-spellcast.pulse.racial.Dragonkin=1.000
+spellcast.pulse.racial.Dragon=1.100
+spellcast.pulse.racial.Dragonkin=1.100
 spellcast.pulse.racial.Reptile=1.000
 spellcast.pulse.racial.Snake=1.000
 spellcast.pulse.racial.Insect=1.000
@@ -494,38 +488,38 @@ spellcast.pulse.racial.Plant=1.000
 spellcast.pulse.racial.Herbivore=1.000
 spellcast.pulse.racial.Carnivore=1.000
 spellcast.pulse.racial.Parasite=1.000
-spellcast.pulse.racial.Beholder=1.000
-spellcast.pulse.racial.Dracolich=1.000
+spellcast.pulse.racial.Beholder=1.100
+spellcast.pulse.racial.Dracolich=0.800
 spellcast.pulse.racial.Slime=1.000
 spellcast.pulse.racial.Githzerai=1.000
 spellcast.pulse.racial.Angel=1.000
 spellcast.pulse.racial.Rakshasa=1.000
 spellcast.pulse.racial.Efreet=1.000
-spellcast.pulse.racial.SnowOgre=1.000
+spellcast.pulse.racial.SnowOgre=1.100
 spellcast.pulse.racial.Beholderkin=1.000
 spellcast.pulse.racial.Skeleton=1.000
-spellcast.pulse.racial.Shadow=1.000
-spellcast.pulse.racial.Wraith=1.000
+spellcast.pulse.racial.Shadow=0.700
+spellcast.pulse.racial.Wraith=0.800
 spellcast.pulse.racial.Spectre=1.000
 spellcast.pulse.racial.Zombie=1.000
-spellcast.pulse.racial.Drider=1.000
-spellcast.pulse.racial.PurpleWorm=1.000
-spellcast.pulse.racial.Agathinon=1.000
+spellcast.pulse.racial.Drider=1.100
+spellcast.pulse.racial.PurpleWorm=1.100
+spellcast.pulse.racial.Agathinon=0.900
 spellcast.pulse.racial.VoidElemental=1.000
 spellcast.pulse.racial.IceElemental=1.000
-spellcast.pulse.racial.Eladrin=1.000
-spellcast.pulse.racial.Kobold=0.800
+spellcast.pulse.racial.Eladrin=0.800
+spellcast.pulse.racial.Kobold=0.500
 spellcast.pulse.racial.Pillithid=1.000
-spellcast.pulse.racial.KuoToa=1.000
-spellcast.pulse.racial.WoodElf=1.000
-spellcast.pulse.racial.Firbolg=1.000
+spellcast.pulse.racial.KuoToa=1.100
+spellcast.pulse.racial.WoodElf=0.950
+spellcast.pulse.racial.Firbolg=1.200
 spellcast.pulse.racial.Archon=1.000
 spellcast.pulse.racial.Asura=1.000
-spellcast.pulse.racial.Bralani=1.000
-spellcast.pulse.racial.Ghaele=1.000
-spellcast.pulse.racial.Deva=1.000
-spellcast.pulse.racial.Titan=1.000
-spellcast.pulse.racial.Avatar=1.000
+spellcast.pulse.racial.Bralani=0.800
+spellcast.pulse.racial.Ghaele=0.900
+spellcast.pulse.racial.Deva=0.700
+spellcast.pulse.racial.Titan=0.800
+spellcast.pulse.racial.Avatar=0.800
 [exp]
 exp.factor.Elite.mob=1.000
 exp.factor.global=2.000
@@ -569,8 +563,7 @@ exp.factor.Minotaur=0.900
 exp.factor.Thri-kreen=0.650
 exp.factor.MountainDwarf=0.900
 exp.factor.Agathinon=0.500
-exp.factor.Lich=1.000
-exp.factor.PLich=0.666
+exp.factor.Lich=0.666
 exp.factor.Vampire=0.500
 exp.factor.Half-elf=1.000
 exp.factor.Githzerai=1.000
@@ -985,46 +978,26 @@ stats.wis.Goblin=130.000
 stats.cha.Goblin=80.000
 stats.kar.Goblin=100.000
 stats.luc.Goblin=100.000
-stats.str.Lich=85.000
-stats.dex.Lich=75.000
-stats.agi.Lich=100.000
-stats.con.Lich=100.000
-stats.pow.Lich=180.000
-stats.int.Lich=140.000
-stats.wis.Lich=80.000
-stats.cha.Lich=50.000
+stats.str.Lich=82.000
+stats.dex.Lich=115.000
+stats.agi.Lich=115.000
+stats.con.Lich=82.000
+stats.pow.Lich=125.000
+stats.int.Lich=135.000
+stats.wis.Lich=100.000
+stats.cha.Lich=90.000
 stats.kar.Lich=100.000
 stats.luc.Lich=100.000
-stats.str.PLich=82.000
-stats.dex.PLich=115.000
-stats.agi.PLich=115.000
-stats.con.PLich=82.000
-stats.pow.PLich=125.000
-stats.int.PLich=135.000
-stats.wis.PLich=100.000
-stats.cha.PLich=90.000
-stats.kar.PLich=100.000
-stats.luc.PLich=100.000
-stats.str.Vampire=105.000
-stats.dex.Vampire=105.000
+stats.str.Vampire=111.000
+stats.dex.Vampire=115.000
 stats.agi.Vampire=115.000
 stats.con.Vampire=110.000
-stats.pow.Vampire=120.000
+stats.pow.Vampire=110.000
 stats.int.Vampire=100.000
 stats.wis.Vampire=100.000
 stats.cha.Vampire=100.000
 stats.kar.Vampire=100.000
 stats.luc.Vampire=100.000
-stats.str.PVampire=111.000
-stats.dex.PVampire=115.000
-stats.agi.PVampire=115.000
-stats.con.PVampire=110.000
-stats.pow.PVampire=110.000
-stats.int.PVampire=100.000
-stats.wis.PVampire=100.000
-stats.cha.PVampire=100.000
-stats.kar.PVampire=100.000
-stats.luc.PVampire=100.000
 stats.str.DeathKnight=120.000
 stats.dex.DeathKnight=95.000
 stats.agi.DeathKnight=95.000
@@ -1605,13 +1578,13 @@ stats.wis.PurpleWorm=10.000
 stats.cha.PurpleWorm=20.000
 stats.kar.PurpleWorm=100.000
 stats.luc.PurpleWorm=100.000
-stats.str.Agathinon=105.000
-stats.dex.Agathinon=105.000
-stats.agi.Agathinon=100.000
-stats.con.Agathinon=105.000
-stats.pow.Agathinon=106.000
-stats.int.Agathinon=90.000
-stats.wis.Agathinon=90.000
+stats.str.Agathinon=110.000
+stats.dex.Agathinon=115.000
+stats.agi.Agathinon=115.000
+stats.con.Agathinon=110.000
+stats.pow.Agathinon=110.000
+stats.int.Agathinon=100.000
+stats.wis.Agathinon=100.000
 stats.cha.Agathinon=100.000
 stats.kar.Agathinon=100.000
 stats.luc.Agathinon=100.000
@@ -1718,11 +1691,9 @@ innate.shrug.Phantom=20.000
 innate.shrug.Half-Elf=20.000
 innate.shrug.Human=0.000
 innate.shrug.Lich=40.000
-innate.shrug.PLich=40.000
 innate.shrug.Eladrin=40.000
 innate.shrug.DrowElf=55.000
 innate.shrug.Vampire=50.000
-innate.shrug.PVampire=50.000
 innate.shrug.AirElemental=20.000
 innate.shrug.WaterElemental=55.000
 innate.shrug.FireElemental=20.000
@@ -1741,7 +1712,7 @@ innate.shrug.Wraith=35.000
 innate.shrug.Shadow=60.000
 innate.shrug.Deva=60.000
 innate.shrug.Drider=55.000
-innate.shrug.Agathinon=20.000
+innate.shrug.Agathinon=50.000
 innate.shrug.VoidElemental=35.000
 innate.shrug.IceElemental=5.000
 innate.shrug.Pillithid=40.000
@@ -2168,8 +2139,10 @@ prestige.constructionPoints.notch=100.000
 poison.maxDuration.min=4.000
 [ascend]
 ascend.epicCost=2500.000
+ascend.epicCost.Eladrin=250.000
 [descend]
 descend.epicCost=2500.000
+descend.epicCost.Lich=250.000
 [remort]
 remort.monk.epic.cost=1000.000
 remort.monk.cost=5000000.000
@@ -2238,7 +2211,7 @@ gain.exp.mod.player.level.fortyone=1.000
 gain.exp.mod.player.level.fiftyone=0.666
 gain.exp.mod.player.level.fiftyfive=1.000
 gain.exp.mod.victim.ability.breath.weapon=1.100
-gain.exp.mod.victim.race.Agathinon=1.000
+gain.exp.mod.victim.race.Agathinon=1.100
 gain.exp.mod.victim.race.AirElemental=1.100
 gain.exp.mod.victim.race.Angel=1.250
 gain.exp.mod.victim.race.Animal=0.900
@@ -2291,9 +2264,7 @@ gain.exp.mod.victim.race.MountainDwarf=1.000
 gain.exp.mod.victim.race.Ogre=1.100
 gain.exp.mod.victim.race.Orc=1.000
 gain.exp.mod.victim.race.Orog=1.000
-gain.exp.mod.victim.race.PLich=1.000
 gain.exp.mod.victim.race.Eladrin=1.000
-gain.exp.mod.victim.race.PVampire=1.000
 gain.exp.mod.victim.race.Parasite=0.700
 gain.exp.mod.victim.race.Phantom=1.100
 gain.exp.mod.victim.race.Plant=0.700
