Outpost upkeep costs.  1k for 1, multiplied by 5 for each owned op thereafter ie 25k for 3 owned outposts per day, subtracted per hour. wont drop outposts if cant afford for first hour into boot. added outpost drop id to drop ownership of outposts manually.  players can now enter guildhalls if grouped with a guild owner.

--- a/lib/duris.properties
+++ b/lib/duris.properties
@@ -633,6 +633,8 @@ outpost.cost.repair=1000000.000
 outpost.repair.div=10.000
 outpost.cost.golem=3000000.000
 outpost.cost.portal=5000000.000
+outpost.cost.upkeep=1000000.000
+outpost.cost.upkeep.multi.modifier=5.000
 outpost.materials.apply.rate=1.000
 outpost.materials.death.convert=0.500
 outpost.materials.death.convert.carpenter=0.750
