Initial skeleton for CTF files for Venthix to check out

--- a/src/Makefile.cygwin
+++ b/src/Makefile.cygwin
@@ -74,7 +74,8 @@ OBJS	=  \
 	common.o \
 	condition.o \
 	constant.o \
-	db.o \
+	CTF.o \
+        db.o \
 	debug.o \
 	disguise.o \
 	dreadlord.o \
